[gd_scene load_steps=3 format=3 uid="uid://c7bd503h2tedl"]

[ext_resource type="Theme" uid="uid://cnijpvvboopqv" path="res://Themes/base_font_styles.tres" id="1_4sgy1"]
[ext_resource type="Script" path="res://Scripts/inventory/inventory_slot.gd" id="1_xmjry"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 151.0
offset_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_4sgy1")
script = ExtResource("1_xmjry")

[node name="InnerBorder" type="ColorRect" parent="."]
custom_minimum_size = Vector2(140, 140)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ItemIcon" type="TextureRect" parent="InnerBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_right = 45.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="DropButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 0
text = "Drop"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="DropButton" to="." method="_on_drop_button_pressed"]
